fix(signage2): date right-aligned instead of justified

--- a/obsidian-asteroid/src/app/signage2/signage2.module.css
+++ b/obsidian-asteroid/src/app/signage2/signage2.module.css
@@ -356,8 +356,7 @@
     display: block;
     width: 100%;
     /* same bounding box as the time string */
-    text-align: justify;
-    text-align-last: justify;
+    text-align: right;
     font-size: 0.42em;
     font-weight: 500;
     line-height: 1.4;
